samples/_failures_safe/1761596078_db0671_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_15ffd909.c: In function ‘main’:
./samples/SAFE/__tmp_15ffd909.c:153:24: error: missing terminating " character
  153 |                 printf("De
      |                        ^~~
./samples/SAFE/__tmp_15ffd909.c:153:17: error: expected expression at end of input
  153 |                 printf("De
      |                 ^~~~~~
./samples/SAFE/__tmp_15ffd909.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_15ffd909.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_15ffd909.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_15ffd909.c:153:17: error: expected declaration or statement at end of input
